trocado de Maria para Jeferson

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td>Sou Estudante</td>
         </tr>
         <tr>
-            <td>Maria</td>
+            <td>Jeferson</td>
             <td>23</td>
             <td colspan="2">Programadora</td>
         </tr>
