retirado a palavra sou de estudante

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <tr>
             <td>João</td>
             <td>25</td>
-            <td>Sou Estudante</td>
+            <td>Estudante</td>
         </tr>
         <tr>
             <td>Jeferson</td>
