mudando de informações para dados

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <tr>
             <th>Nome</th>
             <th>Idade</th>
-            <th>Informações Adicionais</th>
+            <th>Dados Adicionais</th>
             <th>Informações Adicionais</th>
             <th>Informações Adicionais</th>
             <th>Informações Adicionais</th>
