Mudando informações estruturais da tabela

--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th>Nome</th>
-            <th>Idade</th>
-            <th>Dados Adicionais</th>
-            <th>Informações Adicionais</th>
-            <th>Informações Adicionais</th>
-            <th>Informações Adicionais</th>
+        <tr>        
+            <th>Tamanho</th>
+            <th>Vermelho</th>
+            <th>Disponibilidade</th>
         </tr>
         <tr>
-            <td>João</td>
-            <td>25</td>
-            <td>Estudante</td>
+            <td>Camiseta</td>
+            <td>Preta</td>
+            <td>M</td>
+            <td>R$ 70,00</td>
+            <td>Em estoque</td>
         </tr>
         <tr>
-            <td>Jeferson</td>
-            <td>24</td>
-            <td colspan="2">Programadora</td>
+            <td>Calça Jeans</td>
+            <td>Azul</td>
+            <td>P</td>
+            <td>R$ 160,00</td>
+            <td>Esgotado</td>
         </tr>
     </table>
 
