Mudando cor da camiseta preta para vermelha

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <body>
     <table>
         <tr>        
+            <th>Roupa</th>
+            <th>Cor</th>
             <th>Tamanho</th>
-            <th>Vermelho</th>
+            <th>Preço</th>
             <th>Disponibilidade</th>
         </tr>
         <tr>
             <td>Camiseta</td>
-            <td>Preta</td>
+            <td>Vermelha</td>
             <td>M</td>
             <td>R$ 70,00</td>
             <td>Em estoque</td>
