Adicionando título "Tabelas"

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela</title>
+    <title>Tabelas</title>
     <style>
-        table, th, td {
+        table,
+        th,
+        td {
             border: 1px solid black;
         }
     </style>
 </head>
+
 <body>
+
+    <h1>Tabelas</h1>
+
     <table>
-        <tr>        
+        <tr>
             <th>Roupa</th>
             <th>Cor</th>
             <th>Tamanho</th>
@@ -36,4 +43,5 @@
     </table>
 
 </body>
+
 </html>
